# internal/request/kegiatan.go
@@ -8,26 +8,28 @@ import (
 type ReqKegiatan struct {
 	Judul    string              `json:"judul" binding:"required"`
 	Desc     string              `json:"desc"`
-	Kategori ReqKegiatanKategori `json:"kategori" binding:"required"`
+	Kategori ReqKegiatanKategori `json:"kategori" binding:"required" db:"kategori_id"`
 	NoSurat  string              `json:"no_surat"`
 }
 
 func (k ReqKegiatan) ConvertToModel() *model.Kegiatan {
 	return &model.Kegiatan{
-		Judul: sql.NullString{String: "", Valid: true},
-		Desc:  sql.NullString{},
+		Judul:      sql.NullString{String: k.Judul, Valid: true},
+		Desc:       sql.NullString{String: k.Desc, Valid: true},
+		KategoriId: sql.NullInt32{Int32: k.Kategori.ID, Valid: true},
 		Kategori: model.Kategori{
 			ID: int(k.Kategori.ID),
 		},
-		NoSurat: sql.NullString{},
+		NoSurat: sql.NullString{String: k.NoSurat, Valid: true},
 	}
 }
 
 func (k ReqKegiatan) ConvertToModelWithID(kategoriID int32) *model.Kegiatan {
 	return &model.Kegiatan{
-		ID:    sql.NullInt32{Int32: kategoriID, Valid: true},
-		Judul: sql.NullString{String: k.Judul, Valid: true},
-		Desc:  sql.NullString{String: k.Desc, Valid: true},
+		ID:         kategoriID,
+		Judul:      sql.NullString{String: k.Judul, Valid: true},
+		Desc:       sql.NullString{String: k.Desc, Valid: true},
+		KategoriId: sql.NullInt32{Int32: k.Kategori.ID, Valid: true},
 		Kategori: model.Kategori{
 			ID: int(k.Kategori.ID),
 		},
@@ -37,4 +39,8 @@ func (k ReqKegiatan) ConvertToModelWithID(kategoriID int32) *model.Kegiatan {
 
 type ReqKegiatanKategori struct {
 	ID int32 `json:"id" binding:"required"`
+}
+
+type PathKegiatanID struct {
+	ID int32 `json:"id" binding:"required" uri:"id"`
 }
